<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="St_Assy_SetReferences" Id="{827ee3d8-4551-42fd-b1ce-a71660b19a9c}">
    <Declaration><![CDATA[TYPE St_Assy_SetReferences EXTENDS St_Assy_Base :
STRUCT
	sCustomField	:STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>