<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_AssyComplete" Id="{5daee721-7baa-46e8-9bc1-3bac02e901b7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_AssyComplete :
(
	PASS := 0,
	FAIL := 1,
	BREAK := 2
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>